--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,56 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  generate-openapi-spec:
+    if: github.event_name == 'push' && github.repository_owner == 'PiRogueToolSuite'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+      security-events: write
+    name: Generate OpenAPI specifications
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+          cache: 'pip'
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Run server in background
+        run: fastapi run app/main.py --port 8000 &
+      - name: Generate OpenAPI document
+        run: curl -f http://localhost:8000/openapi.json -o openapi.json
+      - uses: actions/upload-artifact@v4
+        with:
+          name: openapi.json
+          path: openapi.json
+      - name: Generate Redoc static documentation
+        run: npx -y @redocly/cli build-docs openapi.json --output=doc/index.html
+      - name: Upload API documentation
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./doc
+  deploy-api-documentation:
+    needs: generate-openapi-spec
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
   docker-build:
     if: github.event_name == 'push' && github.repository_owner == 'PiRogueToolSuite'
     runs-on: ubuntu-latest
@@ -35,7 +85,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Setup Docker buildx
@@ -44,7 +94,7 @@ jobs:
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
