--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,25 @@
 name: CI
 
-# Enable Buildkit and let compose use it to speed up image building
 env:
   DOCKER_BUILDKIT: 1
   COMPOSE_DOCKER_CLI_BUILD: 1
-  # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
 
 on:
   pull_request:
     branches: [ "main", "next" ]
     paths-ignore: [ "docs/**", "README.md" ]
-
   push:
     branches: [ "main", "next" ]
     paths-ignore: [ "docs/**", "README.md" ]
-    tags: [ 'v*.*.*' ]
-
-concurrency:
-  group: ${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
+  release:
+    types: [ created ]
 
 jobs:
-  generate-openapi-spec:
-    if: github.event_name == 'push' && github.repository_owner == 'PiRogueToolSuite'
+  generate-openapi-schema:
+    name: Generate OpenAPI schema
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-      security-events: write
-    name: Generate OpenAPI specifications
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -42,7 +29,7 @@ jobs:
           python-version: '3.13'
           cache: 'pip'
       - name: Install Python dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r dev-requirements.txt
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -51,18 +38,39 @@ jobs:
         run: fastapi run app/main.py --port 8000 &
       - name: Generate OpenAPI document
         run: curl -f http://localhost:8000/openapi.json -o openapi.json
-      - uses: actions/upload-artifact@v4
+
+  api-tests:
+    name: Test the API with Schemathesis
+    needs: generate-openapi-schema
+    runs-on: ubuntu-latest
+    steps:
+      - uses: schemathesis/action@v1
         with:
-          name: openapi.json
-          path: openapi.json
+          schema: 'http://127.0.0.1:8000/openapi.json'
+          token: ${{ secrets.SCHEMATHESIS_TOKEN }}
+          args: '--checks all --experimental=openapi-3.1 --experimental=schema-analysis'
+
+  generate-openapi-doc:
+    name: Generate OpenAPI documentation
+    needs: [generate-openapi-schema, api-tests]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+      security-events: write
+    steps:
       - name: Generate Redoc static documentation
         run: npx -y @redocly/cli build-docs openapi.json --output=doc/index.html
       - name: Upload API documentation
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./doc
-  deploy-api-documentation:
-    needs: generate-openapi-spec
+
+  deploy-api-doc:
+    name: Deploy the API documentation on GitHub Pages
+    if: startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite'
+    needs: generate-openapi-doc
     permissions:
       pages: write
       id-token: write
@@ -74,15 +82,16 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
   docker-build:
-    if: github.event_name == 'push' && github.repository_owner == 'PiRogueToolSuite'
+    if: startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite'
+    needs: api-tests
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
       id-token: write
       security-events: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
