--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Run server in background
-        run: fastapi run app/main.py --port 8000 &
+      - name: Run the server in background
+        uses: ./.github/actions/run-server
       - uses: schemathesis/action@v1
         with:
           schema: 'http://127.0.0.1:8000/openapi.json'
