--- a/.github/actions/run-server/action.yml
+++ b/.github/actions/run-server/action.yml
@@ -1,10 +1,8 @@
 name: 'Run FastAPI server in background'
 description: 'Reusable action to run the FastAPI server in background on port 8000.'
 runs:
-  using: "composite"
+  using: composite
   steps:
-  - name: Checkout repository
-    uses: actions/checkout@v4
   - name: Set up Python 3.13
     uses: actions/setup-python@v5
     with:
