--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,6 @@ jobs:
 
   docker-build:
     name: Build and publish the docker image
-    if: startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite'
     needs: api-tests
     runs-on: ubuntu-latest
     permissions:
@@ -122,7 +121,7 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
+          push: startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite'
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           annotations: |
@@ -132,13 +131,8 @@ jobs:
             annotation.org.opencontainers.image.licenses="GPL-3.0"
             annotation.org.opencontainers.image.revision="${{ github.sha }}"
 
-      - name: Log into Docker Hub
-        uses: docker/login-action@v3.1.0
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Docker Scout
+        if: startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite'
         id: docker-scout
         uses: docker/scout-action@v1
         with:
@@ -151,8 +145,8 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload SARIF result
+        if: startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite'
         id: upload-sarif
-        if: ${{ github.event_name != 'pull_request' }}
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: sarif.output.json
