--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,7 +121,7 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
-          push: startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite'
+          push: ${{ startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           annotations: |
