--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,6 +131,12 @@ jobs:
             annotation.org.opencontainers.image.licenses="GPL-3.0"
             annotation.org.opencontainers.image.revision="${{ github.sha }}"
 
+      - name: Log into Docker Hub
+        uses: docker/login-action@v3.1.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Docker Scout
         if: startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite'
         id: docker-scout
