--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         run: npx -y @redocly/cli build-docs openapi.json --output=doc/index.html
       - name: Upload API documentation
         if: startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite'
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
         with:
           path: ./doc
 
@@ -121,7 +121,8 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
-          push: ${{ startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite' }}
+          # push: ${{ startsWith(github.ref, 'refs/tags/') && github.repository_owner == 'PiRogueToolSuite' }}
+          push: ${{ github.event_name != 'pull_request' && github.repository_owner == 'PiRogueToolSuite' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           annotations: |
